--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Bike Shop</h1>
     <p>Your One-Stop Bike Destination</p>
   </header>
-  <img src="../royal-enfield-select-model-rebel-blue-1668160495860.webp" height="200">
+  <img src="./royal-enfield-select-model-rebel-blue-1668160495860.webp" height="200">
   <main>
     <section>
       <h2>Featured Bikes</h2>
